[gd_scene load_steps=5 format=3 uid="uid://dcdopdxpyui85"]

[ext_resource type="Script" path="res://managers/boardmanager.gd" id="1"]
[ext_resource type="Script" path="res://managers/gamemanager.gd" id="2"]
[ext_resource type="Script" path="res://managers/playermanager.gd" id="3"]
[ext_resource type="Script" path="res://managers/cardmanager.gd" id="4"]

[node name="GameManager" type="Node"]
script = ExtResource("2")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("3")

[node name="BoardManager" type="Node" parent="."]
script = ExtResource("1")

[node name="CardManager" type="Node" parent="."]
script = ExtResource("4")

[node name="CardActivation" type="Node" parent="CardManager"]
